<resources>
    <string name="app_name">Instagram UI</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">muhammadov_abdusamid</string>
    <string name="_2_fragment">2-Fragment</string>
    <string name="likers">liked by jamolhonov_abdulaziz and 96 others</string>
    <string name="d1lshodov1ch_05_n_muhammadov_abdusamid">d1lshodov1ch_05 🔥🔥🔥 \n muhammadov_abdusamid 🔥🔥🔥🔥🔥🔥</string>
    <string name="_96_likes">96 likes</string>
    <string name="muhammadov_abdusamid">muhammadov_abdusamid</string>
    <string name="muhammadov_abdusamid_n_ferghana_uzbekistan">muhammadov_abdusamid \n Ferghana,Uzbekistan</string>
</resources>