<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/second_fragment11"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="developer.abdusamid.SecondFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/instagram"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent" />

            <ImageView
                android:id="@+id/masseg"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:layout_margin="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_menu"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:layout_margin="10dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/pluus"
                app:layout_constraintRight_toLeftOf="@id/masseg"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/Storys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_fragment"
            android:layout_marginRight="70dp"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instagram"
            tools:layout_editor_absoluteY="0dp">


            <androidx.cardview.widget.CardView
                android:id="@+id/profil"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="1dp"
                app:cardCornerRadius="100dp"
                app:cardMaxElevation="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/fri"
                    tools:ignore="ContentDescription" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="1dp"
                app:cardCornerRadius="100dp"
                app:cardMaxElevation="20dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/win_7"
                    tools:ignore="ContentDescription" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="1dp"
                app:cardCornerRadius="100dp"
                app:cardMaxElevation="20dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/flag_of_usa1" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="1dp"
                app:cardCornerRadius="100dp"
                app:cardMaxElevation="20dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/turkey" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:background="@color/white"
            android:text="     Your Story   dilshodovich_05        Joe               viphotdog            "
            android:textColor="@color/black"
            android:textSize="12dp"
            app:layout_constraintTop_toBottomOf="@id/Storys" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fotonastroki"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constn1">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardd1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            app:cardCornerRadius="100dp"
            app:cardElevation="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fri"
                android:elevation="100dp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/muhammadov_abdusamid_n_ferghana_uzbekistan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/cardd1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/nuqta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/fotonastroki">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@drawable/win_7"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/photo">

        <ImageView
            android:id="@+id/like"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_marginStart="10dp"
            android:background="@drawable/like"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ImageView
            android:id="@+id/comment"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/comment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/like" />


        <ImageView
            android:id="@+id/jonatish"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/comment" />

        <ImageView
            android:id="@+id/savee"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="@drawable/savee"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:text="@string/_96_likes"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/likers"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/d1lshodov1ch_05_n_muhammadov_abdusamid"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>